# Compressai-Speedup

./: .gitignore  CMakeLists.txt  README.md  cmpai.pc.in
.github/workflows/: ci.yml
include/: codec.h  entropy_bottleneck.h  onnx_model_wrapper.h  rans_interface.hpp  save_utils.h
models/: bmshj2018-factorized-mse-q3-entropy_bottleneck.npz
src/: cli.cpp  codec.cpp  entropy_bottle_neck.cpp  onnx_model_wrapper.cpp  rans_interface.cpp  save_utils.cpp
